--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+@import "./stylings/fonts";
+@import "./stylings/layout";
+@import "./stylings/theme";
