add button and method open close nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <div>{{ title }}</div>
+<app-ui>
+  <button class="tr-btn">open / close</button>
+  <app-header id="tr-header"></app-header>
+  <app-nav id="tr-nav"></app-nav>
+  <app-footer id="tr-footer"></app-footer>
+</app-ui>
