add icon import FontAwesome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>{{ title }}</div>
 <app-ui>
+  <app-icon-nav class="tr-btn"></app-icon-nav>
+  <app-icon-close class="tr-btn"></app-icon-close>
   <button class="tr-btn">open / close</button>
   <app-header id="tr-header"></app-header>
   <app-nav id="tr-nav"></app-nav>
