add condition typescript open close nav and new version app ui2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<div>{{ title }}</div>
-<app-ui>
-  <app-icon-nav class="tr-btn"></app-icon-nav>
-  <app-icon-close class="tr-btn"></app-icon-close>
-  <button class="tr-btn">open / close</button>
-  <app-header id="tr-header"></app-header>
-  <app-nav id="tr-nav"></app-nav>
-  <app-footer id="tr-footer"></app-footer>
-</app-ui>
+<app-ui2>
+  <app-icon-close class="tr-close"></app-icon-close>
+  <app-icon-nav class="tr-open"></app-icon-nav>
+  <app-header class="tr-header"></app-header>
+  <app-nav class="tr-nav"></app-nav>
+  <app-footer class="tr-footer"></app-footer>
+</app-ui2>
