--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -1,15 +1,23 @@
 <header class="fixed-top">
-  <ng-content select="app-header#tr-header"></ng-content>
   <span (click)="toggle()">
-    <ng-content select=".tr-btn"></ng-content>
+    <!-- <ng-content *ngIf="close" select=".tr-open"></ng-content>
+    <ng-content *ngIf="!close" select=".tr-close"></ng-content> -->
+    <ng-content *ngIf="close; then thenBlock else elseBlock"></ng-content>
   </span>
+    <ng-template #thenBlock>
+      <ng-content select=".tr-open"></ng-content>
+    </ng-template>
+    <ng-template #elseBlock>
+      <ng-content select=".tr-close"></ng-content>
+    </ng-template>
+  <ng-content select=".tr-header"></ng-content>
 </header>
 <main [ngClass]="{'close-aside': close}">
   <div class="shadow position-fixed">
   </div>
   <aside class="close-aside">
     <div class="scroller">
-      <ng-content select="app-nav#tr-nav"></ng-content>
+      <ng-content select=".tr-nav"></ng-content>
     </div>
   </aside>
   <div class="page">
@@ -17,7 +25,7 @@
       Content
     </div>
     <footer>
-      <ng-content select="app-footer#tr-footer"></ng-content>
+      <ng-content select=".tr-footer"></ng-content>
     </footer>
   </div>
 </main>
