--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -22,7 +22,7 @@
   </aside>
   <div class="page">
     <div class="contents">
-      Content
+      <ng-content select=".tr-content"></ng-content>
     </div>
     <footer>
       <ng-content select=".tr-footer"></ng-content>
