--- a/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
+++ b/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
@@ -1,1 +1,2 @@
-<p>page-list-orders-component works!</p>
+<app-template-full-width title="valeur dans input template full width ts">
+</app-template-full-width>
