--- a/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
+++ b/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
@@ -1,2 +1,3 @@
-<app-template-full-width title="valeur dans input template full width ts">
+<app-template-full-width [title]="title">
+  <button (click)="changeTitle()">change title</button>
 </app-template-full-width>
