exo solo add button dynamic page list orders and add order

--- a/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
+++ b/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
@@ -1,3 +1,4 @@
 <app-template-full-width [title]="title">
   <button (click)="changeTitle()">change title</button>
+  <app-btn [btnLabel]="btnLabel" routerLink="add"></app-btn>
 </app-template-full-width>
