--- a/src/app/orders/pages/page-add-order-component/page-add-order-component.component.html
+++ b/src/app/orders/pages/page-add-order-component/page-add-order-component.component.html
@@ -1,1 +1,3 @@
-<p>page-add-order-component works!</p>
+<app-template-full-width [title]="title">
+  <app-btn [btnLabel]="btnLabel" routerLink="/orders"></app-btn>
+</app-template-full-width>
