add component table light : transclusion list orders dynamic with loop on db json

--- a/src/app/shared/components/table-light/table-light.component.html
+++ b/src/app/shared/components/table-light/table-light.component.html
@@ -1,1 +1,10 @@
-<p>table-light works!</p>
+<table class="table">
+  <thead>
+    <tr>
+      <th *ngFor="let header of headers">{{header}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <ng-content></ng-content>
+  </tbody>
+</table>
