--- a/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
+++ b/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
@@ -1,4 +1,13 @@
 <app-template-full-width [title]="title">
-  <button (click)="changeTitle()">change title</button>
+  <app-table-light [headers]="headers" *ngIf="collection">
+        <tr *ngFor="let item of collection">
+          <td>{{item.typePresta}}</td>
+          <td>{{item.designation}}</td>
+          <td>{{item.nbDays}}</td>
+          <td>{{item.unitPrice}}</td>
+          <td>TOTAL</td>
+          <td>{{item.state}}</td>
+        </tr>
+  </app-table-light>
   <app-btn [btnLabel]="btnLabel" routerLink="add"></app-btn>
 </app-template-full-width>
