--- a/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
+++ b/src/app/orders/pages/page-list-orders-component/page-list-orders-component.component.html
@@ -1,12 +1,22 @@
 <app-template-full-width [title]="title">
   <app-table-light [headers]="headers" *ngIf="collection$ | async as collection ">
+    <!--<pre>{{ collection | json }}</pre> très intéressant pour visualiser la bdd -->
         <tr *ngFor="let item of collection">
           <td>{{ item.typePresta }}</td>
           <td>{{ item.designation }}</td>
           <td>{{ item.nbDays }}</td>
           <td>{{ item.unitPrice | currency }}</td>
           <td>{{ item.unitPrice | total : item.nbDays | currency }}</td>
-          <td>{{ item.state }}</td>
+          <td>
+            <select name="state" id="state">
+              <option
+                *ngFor="let state of states"
+                [value]="state"
+                [selected]="item.state == state">
+                  {{ state }}
+              </option>
+            </select>
+          </td>
         </tr>
   </app-table-light>
   <app-btn [btnLabel]="btnLabel" routerLink="add"></app-btn>
