--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -6,4 +6,4 @@
     <a class="nav-link" routerLink="clients" routerLinkActive="active">Clients</a>
   </li>
 </ul>
-<button (click)="increment()">Increment</button>
+<button (click)="increment()">Increment Version</button>
