--- a/src/app/orders/pages/page-add-order-component/page-add-order-component.component.html
+++ b/src/app/orders/pages/page-add-order-component/page-add-order-component.component.html
@@ -1,3 +1,4 @@
-<app-template-full-width [title]="title">
-  <app-btn [btnLabel]="btnLabel" routerLink="/orders"></app-btn>
-</app-template-full-width>
+<app-template-container [title]="title">
+    <app-form-order [init]="item" (submitted)="action($event)"></app-form-order>
+    <app-btn btnLabel="Liste des commandes" btnRoute="/orders"></app-btn>
+</app-template-container>
