--- a/src/app/shared/components/btn/btn.component.html
+++ b/src/app/shared/components/btn/btn.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-warning btn-lg">{{btnLabel}}</button>
+<button type="button" class="btn btn-warning btn-lg" [routerLink]="btnRoute">{{btnLabel}}</button>
